MV Hauptseite verbessert (noch nicht fertig)

--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,10 +1,11 @@
 html {
-    font-size: 10px; }
+    font-size: 10px;
+}
 
 body {
     font-family: 'Muli', Helvetica, sans-serif;
     font-size: 1.8rem;
-    /*background-image: url("../img/Logo.jpg");*/
+    background-color: #d7eef4;
 }
 
 .spezialFont, header .logo {
@@ -15,110 +16,94 @@ body {
     color: white;
     margin: 0;
     margin-bottom: 2rem;
-    text-shadow: -1px -1px 0 #1b5764, 1px -1px 0 #1b5764, -1px 1px 0 #1b5764, 1px 1px 0 #1b5764; }
+    text-shadow: -1px -1px 0 #1b5764, 1px -1px 0 #1b5764, -1px 1px 0 #1b5764, 1px 1px 0 #1b5764;
+}
 
 a {
-    text-decoration: none; }
+    text-decoration: none;
+}
 
 p {
     font-size: 1.8rem;
-    line-height: 2.2rem; }
+    line-height: 2.2rem;
+}
 
 h1, h2, h3 {
-    font-weight: bold; }
+    font-weight: bold;
+}
 
 h4, h5, h6 {
-    font-weight: normal; }
+    font-weight: normal;
+}
 
 h1 {
     font-size: 5rem;
-    line-height: 5.5rem; }
+    line-height: 5.5rem;
+}
 
 @media only screen and (max-width: 850px) {
     h1 {
         font-size: 3.5rem;
-        line-height: 3.5rem; } }
+        line-height: 3.5rem;
+    }
+}
 
 
 @media only screen and (max-width: 850px) {
     main {
-        top: 4rem; } }
+        top: 4rem;
+    }
+}
+
 @media only screen and (max-width: 850px) {
     #hidden_mobile {
-        display: none; } }
+        display: none;
+    }
+}
+
 @media only screen and (min-width: 850px) {
     #hidden_desktop {
-        display: none; } }
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 850px) {
     i {
         padding: 1rem;
         padding-right: 2rem;
         color: white;
-        cursor: pointer; }
-
-    nav li {
-        float: none; }
-
-    .menu_items {
-        position: absolute;
-        right: 0rem; }
+        cursor: pointer;
+    }
 
     .hidden {
-        display: none; } }
-/*** HEADER ***/
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #38B0CC;
-    height: 6rem;
-    position: fixed;
-    width: 100%;
-    z-index: 20; }
-header .logo {
-    background-color: #FFA54F;
-    display: inline-block;
-    font-weight: bold;
-    font-size: 4rem;
-    height: 2.5rem;
-    padding: 3.5rem 2rem 2rem 2rem;
-    background-color: #FFA54F;
-    text-shadow: -1px -1px 0 #B25D0B, 1px -1px 0 #B25D0B, -1px 1px 0 #B25D0B, 1px 1px 0 #B25D0B; }
+        display: none;
+    }
+}
 
-@media only screen and (max-width: 850px) {
-    header {
-        height: 4rem;
-        border-bottom: 1px solid #38B0CC; }
-    header .logo {
-        padding: 2.7rem 1rem 1rem 1rem;
-        font-size: 3rem; } }
-
-
-@media only screen and (max-width: 850px) {
-    .jumbotron h1 {
-        font-size: 3rem;
-        padding: .5rem 0rem 1.5rem 0rem;
-        margin: auto;
-        width: 80%;
-        margin-top: 33rem; } }
-
+#welcome .container_welcome {
+    /*background-color: white;*/
+    padding: 2rem;
+}
 
 /*** PROJECTS ***/
 #projects {
-    position: relative;
-    margin-top: -6rem;
-    padding-top: 6rem;
-    background-color: transparent; }
+
+    background-color: transparent;
+}
+
 #projects .container_project {
-    background-color: #d7eef4; }
+    background-color: #d7eef4;
+}
+
 #projects .subcontainer_project {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     width: 90%;
     margin: auto;
-    padding: 0 5.6rem; }
+    padding: 0 5.6rem;
+}
+
 #projects .container_project_box {
     display: inline-flex;
     flex-direction: column;
@@ -126,10 +111,14 @@ header .logo {
     align-items: flex-start;
     border-radius: 1rem;
     width: 30%;
-    margin: 0 1.6rem 3.6rem 1.6rem; }
+    margin: 0 1.6rem 3.6rem 1.6rem;
+}
+
 #projects .container_project_box .container_image {
     overflow: hidden;
-    border-radius: .5rem; }
+    border-radius: .5rem;
+}
+
 #projects .container_project_box .container_image img {
     height: auto;
     width: auto;
@@ -138,18 +127,26 @@ header .logo {
     border-radius: 1rem;
     width: 100%;
     opacity: 0.7;
-    transition: transform .8s, opacity .8s; }
+    transition: transform .8s, opacity .8s;
+}
+
 #projects .container_project_box .container_image img:hover {
     opacity: 1;
-    transform: scale(1.15, 1.15); }
+    transform: scale(1.15, 1.15);
+}
+
 #projects .container_project_box .project_info {
     background-color: white;
     margin-top: 2rem;
     padding: 1rem;
-    border-radius: 1rem; }
+    border-radius: 1rem;
+}
+
 #projects .container_project_box h2, #projects .container_project_box p {
     color: #1b5764;
-    margin: 1rem .5rem 1rem 2rem; }
+    margin: 1rem .5rem 1rem 2rem;
+}
+
 #projects .container_project_box p.go_button {
     transition-duration: 0.5s;
     text-align: center;
@@ -158,67 +155,99 @@ header .logo {
     border-radius: .5rem;
     color: white;
     background-color: #FFA54F;
-    text-shadow: -1px -1px 0 #B25D0B, 1px -1px 0 #B25D0B, -1px 1px 0 #B25D0B, 1px 1px 0 #B25D0B; }
+    text-shadow: -1px -1px 0 #B25D0B, 1px -1px 0 #B25D0B, -1px 1px 0 #B25D0B, 1px 1px 0 #B25D0B;
+}
+
 #projects .container_project_box p.go_button:hover {
-    box-shadow: 0 0 2rem #1b5764; }
+    box-shadow: 0 0 1rem #1b5764;
+}
 
 @media only screen and (max-width: 850px) {
     #projects {
         margin-top: -4rem;
-        padding-top: 4rem; }
+        padding-top: 4rem;
+    }
+
     #projects .subcontainer_project {
         width: 100%;
         margin: 0;
-        padding: 0; }
+        padding: 0;
+    }
+
     #projects .subcontainer_project .container_project_box {
-        width: 90%; } }
+        width: 90%;
+    }
+}
+
 /*CONTACT*/
 #contact {
-    position: relative;
-    margin-top: -6rem;
-    padding-top: 6rem;
-    background-color: transparent; }
+    background-color: transparent;
+}
+
 #contact .container_contact {
     background-color: #d7eef4;
     color: #1b5764;
-    padding-bottom: 2rem; }
+    padding-bottom: 2rem;
+}
+
 #contact .contact_info {
     width: 90%;
     margin: auto;
     background-color: white;
-    border-radius: 1rem; }
+    border-radius: 1rem;
+}
+
 #contact .contact_info div {
     padding: 1rem 0;
-    text-align: center; }
+    text-align: center;
+}
+
 #contact .contact_info div i {
     display: inline-block;
     padding: 0;
-    color: #1b5764; }
+    color: #1b5764;
+}
+
 #contact .contact_info div span {
     padding: 1rem 0;
-    display: inline-block; }
+    display: inline-block;
+}
+
 #contact .contact_info div p {
-    text-align: center; }
+    text-align: center;
+}
+
 #contact .contact_info div p:last-child {
-    padding: 0; }
+    padding: 0;
+}
+
 #contact .contact_info div:last-child {
-    padding-bottom: 2rem; }
+    padding-bottom: 2rem;
+}
 
 @media only screen and (max-width: 850px) {
     #contact {
         margin-top: -4rem;
-        padding-top: 4rem; } }
+        padding-top: 4rem;
+    }
+}
+
 footer {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 8rem;
-    background-color: #216778; }
+    background-color: #216778;
+}
+
 footer i {
     color: white;
-    padding: 2rem; }
+    padding: 2rem;
+}
 
 
-.frame{
-    padding: 5rem}
+.frame {
+    padding: 5rem
+}
+
 /*# sourceMappingURL=styleIndex.css.map */
