--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -152,6 +152,17 @@ p {
     height: 100%;
 }
 
+.landingpageBlech {
+    height: 50rem;
+    padding-top: 10rem;
+    background: url("../img/blechBanner.png") no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+}
+
 @media (max-width: 768px) {
     .landingpage {
         height: 0;
