--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -161,6 +161,10 @@ p {
 }
 
 .landingpage {
+    background-image: url("../img/MusikvereinViele2025.jpg");
+}
+
+.landingpageBigBand {
     background-image: url("../img/Phungo2024.png");
 }
 
@@ -174,30 +178,25 @@ p {
 }
 
 .landingpageFusion {
-    background: url("../img/FusionBand2.jpg") no-repeat center center;
-    background-size: contain;
+    background-image: url("../img/FusionBand2.jpg") ;
 }
 
 
 @media (max-width: 768px) {
     .landingpage,
+    .landingpageBigBand,
     .landingpageKlassiker,
+    .landingpageFusion,
     .landingpageBlech {
         height: 0;
         margin-top: 60px;
         padding-top: 56.5%;
     }
 }
-/*das Bild der Fusionband zickt rum :( */
-@media (max-width: 768px) {
-    .landingpageFusion{
-        margin-top: 60px;
-        height: 40vh;
-    }
-}
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .landingpage,
+    .landingpageBigBand,
     .landingpageKlassiker,
     .landingpageFusion,
     .landingpageBlech {
@@ -212,6 +211,7 @@ p {
 
 @media (min-width: 1200px) {
     .landingpage,
+    .landingpageBigBand,
     .landingpageKlassiker,
     .landingpageFusion,
     .landingpageBlech {
